/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MarketRoles.IntegrationEventContracts";
/**
 * This message is sent out when an energy supplier has been changed.
 */

message EnergySupplierChanged {
  string accountingpoint_id = 1;
  string gsrn_number = 2; // Unique metering point identification
  string energy_supplier_gln = 3; // Unique Energy Supplier identifcation.
  google.protobuf.Timestamp effective_date = 4; // Date which the change of supplier goes into effect.
}