/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * Time Series Domain related messages.
 */
syntax = "proto3";

// import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.TimeSeries.InternalContracts";

/**
 * Represents a TimeSeriesCommand
 */

message TimeSeriesCommandDomain {
  DocumentDomain document = 1;
  SeriesDomain series = 2;
  string correlation_id = 3;
}

message MarketParticipantDomain {
    string id = 1;
    string name = 2;
    string market_participant_role = 3;
}

message Point {
  string position = 1;
  string observation_date_time = 2;
  string quantity = 3;
  string quality = 4;
}

/**
 * Represents a TimeSeries
 */
message DocumentDomain {
  string id = 1;
  string request_date_time = 2;
  string type = 3;
  string created_date_time = 4;
  MarketParticipantDomain sender = 5;
  MarketParticipantDomain recipient = 6;
  string industry_classification = 7;
  string business_reason_code = 8;
}

/**
 * Represents a TimeSeries
 */
message SeriesDomain {
  string id = 1; // Contains a unique ID for the specific link, provided by the sender.
  string metering_point_id = 2; //
  string metering_point_type = 3; //
  string settlement_method = 4; //
  string registration_date_time = 5; //
  string product = 6; //
  string measure_unit = 7; //
  string time_series_resolution = 8; //
  string start_date_time = 9; //
  string end_date_time = 10; //
  repeated Point points = 11; //
}
